cmake_minimum_required(VERSION 3.27)
project(push_swap_tester/push_swap C)

set(CMAKE_C_STANDARD 11)

include_directories(inc)
include_directories(lib/libft/inc)

add_executable(push_swap
        inc/push_swap.h
        lib/libft/inc/libft.h
        lib/libft/src/ft_is/ft_isalnum.c
        lib/libft/src/ft_is/ft_isalpha.c
        lib/libft/src/ft_is/ft_isascii.c
        lib/libft/src/ft_is/ft_isdigit.c
        lib/libft/src/ft_is/ft_isprint.c
        lib/libft/src/ft_lst/ft_lstadd_back.c
        lib/libft/src/ft_lst/ft_lstadd_front.c
        lib/libft/src/ft_lst/ft_lstbeforelast.c
        lib/libft/src/ft_lst/ft_lstclear.c
        lib/libft/src/ft_lst/ft_lstdelone.c
        lib/libft/src/ft_lst/ft_lstiter.c
        lib/libft/src/ft_lst/ft_lstlast.c
        lib/libft/src/ft_lst/ft_lstmap.c
        lib/libft/src/ft_lst/ft_lstnew.c
        lib/libft/src/ft_lst/ft_lstsize.c
        lib/libft/src/ft_mem/ft_bzero.c
        lib/libft/src/ft_mem/ft_calloc.c
        lib/libft/src/ft_mem/ft_memchr.c
        lib/libft/src/ft_mem/ft_memcmp.c
        lib/libft/src/ft_mem/ft_memcpy.c
        lib/libft/src/ft_mem/ft_memmove.c
        lib/libft/src/ft_mem/ft_memset.c
        lib/libft/src/ft_printf/ft_printf.c
        lib/libft/src/ft_printf/numbers_functions.c
        lib/libft/src/ft_printf/strings_functions.c
        lib/libft/src/ft_put/ft_putchar_fd.c
        lib/libft/src/ft_put/ft_putendl_fd.c
        lib/libft/src/ft_put/ft_putnbr_fd.c
        lib/libft/src/ft_put/ft_putstr_fd.c
        lib/libft/src/ft_str/ft_split.c
        lib/libft/src/ft_str/ft_strchr.c
        lib/libft/src/ft_str/ft_strdup.c
        lib/libft/src/ft_str/ft_striteri.c
        lib/libft/src/ft_str/ft_strjoin.c
        lib/libft/src/ft_str/ft_strlcat.c
        lib/libft/src/ft_str/ft_strlcpy.c
        lib/libft/src/ft_str/ft_strlen.c
        lib/libft/src/ft_str/ft_strmapi.c
        lib/libft/src/ft_str/ft_strncmp.c
        lib/libft/src/ft_str/ft_strnstr.c
        lib/libft/src/ft_str/ft_strrchr.c
        lib/libft/src/ft_str/ft_strtrim.c
        lib/libft/src/ft_str/ft_substr.c
        lib/libft/src/ft_to/ft_atoi.c
        lib/libft/src/ft_to/ft_atol.c
        lib/libft/src/ft_to/ft_itoa.c
        lib/libft/src/ft_to/ft_tolower.c
        lib/libft/src/ft_to/ft_toupper.c
        src/commands/push.c
        src/commands/rev_rotate.c
        src/commands/rotate.c
        src/commands/swap.c
        src/utils/index.c
        src/utils/input_check.c
        src/utils/radix.c
        src/utils/sort_tiny.c
        src/utils/utils.c
        src/main.c
        lib/libft/src/ft_lst/ft_lst_create_and_add.c
        src/utils/radix.c)
